Create separate profile/step for lint checks