@@ -174,6 +174,23 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.release>11</maven.compiler.release>
       </properties>
+    </profile>
+
+    <!--
+      Profile that enables lint checks on compilation
+      Uses Google Error Prone for more coverage
+    -->
+    <profile>
+      <id>lint</id>
+      <activation>
+        <!-- activate lint checks only on JDK1.9+ (required by Error Prone) -->
+        <jdk>(1.9,)</jdk>
+        <!-- custom property to disable link checks on command line (enabled by default) -->
+        <property>
+          <name>!lint.skip</name>
+          <value>!true</value>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
@@ -182,11 +199,23 @@
             <version>3.8.0</version>
             <configuration>
               <showWarnings>true</showWarnings>
+              <fork>true</fork> <!-- Required for JDK16+ -->
               <compilerArgs combine.children="append">
-                <!--arg>-Werror</arg-->
+                <!--arg>-Werror</arg--> <!-- Disabled (temporarily?) -->
                 <arg>-Xlint:all</arg>
                 <arg>-XDcompilePolicy=simple</arg>
                 <arg>-Xplugin:ErrorProne</arg>
+                <!-- Following are required on JDK16+ -->
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
               </compilerArgs>
               <annotationProcessorPaths combine.children="append">
                 <path>
